add user's book functionallity